# ascii-art

./: --brightness=1.5  --contrast=2.0  --invert  .gitignore  .pre-commit-config.yaml  .venv  CONTRIBUTING.md  Dockerfile  FEATURES.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  USAGE.md  ascii-art-matrix-effect-color.py  ascii-art-matrix-effect.py  asciialgo.txt  binary,py  cli.py  community-version.py  community_version.py  custom_text.txt  docker-compose.yml  fast-api-main.py  geometric-art.py  gradio_ascii_art.py  gui.py  hacktober_task_manager.py  home.html  improvement.py  intro.py  invert-color-art.py  main.py  mosaic-art.py  mutex.py  noxfile.py  output.txt  pointillism-art.py  (+9 more)
.github/workflows/: test.yaml
Colored ascii converter/: INSTRUCTIONS.txt  asciiart.py
GUI Version/: README.md  make_art_GUI_QT.py  requirements.txt
Object Oriented Version/: make_art_oo.py
ascii_art/: __init__.py  ascii_art.py  cli.py
ascii_art (local version)/: setup.py
ascii_art_web_app/: README.md  app.py  convert_image.py  requirements.txt
ascii_art_web_app/static/css/: ascii-art.css  styles.css
ascii_art_web_app/templates/: ascii-art.html  ascii_art.html  index.html
ascii_popup/: README.md  make_art_popup.py
ascii_popup/tests/: test_make_art_popup.py
asciiweb/: views.py
client/: .eslintrc.json  .prettierrc  README.md  package-lock.json  package.json
client/src/: App.jsx
example/: Binary_Tree_Right_Side_View.py  Image_to_ASCII_Art_Converter.py  ascii_art.py  convertartpython3.py  makeArtPython3.py  make_art.py  make_art_QT.py  make_art_out.py  make_art_python2.py  make_art_scale_gray.py  snake_game.py  ztm-logo_ascii_art.txt
example/Imagemanual/: Imagemanual.py
fastapi_source/application/ascii/: ascii_service.py
fastapi_source/core/: config.py
fastapi_source/host/: ascii_art_routes.py
gui/: requirements.txt
hockfest/: asgi.py  settings.py  urls.py
minimal/: ascii_converter.py
nikhil/: ztm-logo.txt
oop_version/: make_art_oo.py
server/ascii_art_server/: db.sqlite3  manage.py
server/ascii_art_server/api/: admin.py  urls.py  views.py
server/ascii_art_server/api/ascii_art/: apps.py  views.py
server/ascii_art_server/ascii_art_server/: asgi.py  settings.py  urls.py  wsgi.py
templates/asciiweb/: home.html
test/: db.sqlite3  manage.py
test/asciiweb/: admin.py  apps.py  models.py  urls.py  views.py
test/asciiweb/migrations/: 0001_initial.py
test/hockfest/: wsgi.py
test/templates/asciiweb/: home.html
tests/: README.md  requirements.txt  test_ascii_art.py  tests.py
texture-art-source/: README.md
v3_migration/: samilabud_make_art_python3.py
web/: config.py  run.py
web version/: app.py  run.py
web version/Templates/: error-page.html  img-display.html  img-upload.html  index.html  style.css
web version/ascii_art/: __init__.py  views.py
web version/ascii_art/Templates/: img-upload.html
web version/ascii_art/static/css/: style.css
web version/ascii_art/static/js/: scripts.js
web version/static/: style.css
web version/static/css/: style.css
web version/static/js/: scripts.js
web/ascii_art_web/: __init__.py  util.py  views.py
web/ascii_art_web/static/css/: style.css
web/ascii_art_web/static/js/: scripts.js
web/ascii_art_web/templates/: img-upload.html
working_code/: make_art.py
